Bug 418142 - Process username is nonsense
Summary: Process username is nonsense
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: ksysguard (other bugs)
Version First Reported In: 5.19.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-24 15:55 UTC by Bart Ribbers
Modified: 2021-04-06 08:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of KSyguard window (154.52 KB, image/png)
2020-02-24 15:55 UTC, Bart Ribbers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2020-02-24 15:55:13 UTC
Created attachment 126379 [details]
Screenshot of KSyguard window

SUMMARY
On my system the process username as displayed by KSyguard appears to be nonsense. Instead of the proper username it either shows some strange number or text that doesn't appear to be an username in the first place. See the attached screenshot to see exactly what I mean.

STEPS TO REPRODUCE
1. Launch KSyguard

OBSERVED RESULT
Process usernames appear to be nonsense

EXPECTED RESULT
Process usernames to appear as the proper user it's actually owned by


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Alpine Linux (edge)
(available in About System)
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.12.5

ADDITIONAL INFORMATION
This system uses the Musl library rather than glibc, which might be the cause here.
Comment 1 Nate Graham 2020-02-26 19:04:20 UTC
Weird, that *is* nonsense.
Comment 2 Bug Janitor Service 2021-04-05 22:34:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/144
Comment 3 David Redondo 2021-04-06 08:25:50 UTC
Git commit ea8fc81dd776fd757ee4f5d83b766ab7c56bc0cc by David Redondo, on behalf of John Zimmermann.
Committed on 06/04/2021 at 08:25.
Pushed by davidre into branch 'Plasma/5.21'.

Use lld instead of Ld as format specifier

The C Standard uses L for conversion to long doubles,
ll should be used for conversion to long long int's


(cherry picked from commit 9b7f3d4920e85c3e7befee31aceef81c473c4ebc)

M  +2    -2    processcore/processes_linux_p.cpp

https://invent.kde.org/plasma/libksysguard/commit/ea8fc81dd776fd757ee4f5d83b766ab7c56bc0cc