Use lld instead of Ld as format specifier

The C Standard uses L for conversion to long doubles,
ll should be used for conversion to long long int's

BUG: 418142


(cherry picked from commit 9b7f3d4920e85c3e7befee31aceef81c473c4ebc)